Added a lot of Physik stuff

--- a/Physik/main.tex
+++ b/Physik/main.tex
@@ -1,8 +1,9 @@
 \documentclass[a4paper, 12pt]{scrartcl}
 \input{../preamble.tex}
 
-\usepackage{blindtext}
 \usepackage{geometry}
+\usepackage{helvet}
+\usepackage{siunitx}
 
 \geometry {
         left = 2.5cm,
@@ -14,13 +15,20 @@
 
 \title{Physik Klasse 10 Realschule Bayern}
 \date{\today}
-\author{7h}
 
 \begin{document}
     \maketitle
     \tableofcontents
     % start topics
     \section {Elektronik}
-    \subfile{./Kapitel/Elektronik/Stromstaerke.tex}
+    \subfile{./Kapitel/Elektronik/Wiederholung.tex}
+    \subfile{./Kapitel/Elektronik/Ohmische_Gesetz.tex}
+    \subfile{./Kapitel/Elektronik/Widerstand.tex}
+    \subfile{./Kapitel/Elektronik/Aenderung_des_Widerstandes.tex}
+    \subfile{./Kapitel/Elektronik/Supraleiter.tex}
+    \subfile{./Kapitel/Elektronik/Parallelschaltung.tex}
+    \subfile{./Kapitel/Elektronik/Reihenschaltung.tex}
+    \subfile{./Kapitel/Elektronik/Innenwiderstand.tex}
+    \subfile{./Kapitel/Elektronik/Vorwiderstand.tex}
     % end topics
 \end{document}
