Adding new stuff to Elektric

--- a/Computer/List_of_useful_stuff/main.tex
+++ b/Computer/List_of_useful_stuff/main.tex
@@ -48,6 +48,7 @@
         \item \href{https://www.tutorialspoint.com/cprogramming/c_quick_guide.htm}{C Quick guide}
         \item \href{file:///D:/Documents/ProgrammierenResources/Operating_Systems_From_0_to_1.pdf}{Operating System from 0 to 1}
         \item \href{https://ops-class.org/slides/2017-01-30-intro/}{Operating System briefly defined}
+        \item \href{file:///D:/Documents/ProgrammierenResources/Grundlagen%20Netze%20Mobilfunk%20Breitband%20NGN.pdf}{Kommunikations Technik Fibel}
         \item \href{https://www.allaboutcircuits.com/textbook/}{Basic Electricity}
         \item \href{https://felixangell.com/blogs/virtual-machine-in-c}{Virtual Machine}
         \item \href{https://justinmeiners.github.io/lc3-vm/}{2. Virtual Machine Guide}
@@ -62,6 +63,7 @@
         \item \href{https://www.youtube.com/watch?v=IVquJh3DXUA}{Linux basics}
         \item \href{https://beej.us/guide/bgnet/html//index.html}{Network Programmer}
         \item \href{https://www.hostinger.com/tutorials/ssh-tutorial-how-does-ssh-work}{How ssh work}
+        \item \href{https://shonumi.github.io/articles/art3.html}{NDS Emulator}
     \end{itemize}
     % end topics
 \end{document}
